feat: create the basic file structure

--- a/style.css
+++ b/style.css
@@ -8,4 +8,5 @@ Version: 1.0.0
 Lincense: GNU General Public Lincense v2 or later
 Lincense URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, sidebar, responsive, clean, minimal, icon font, sunset, custom admin options.
+Text Domain: sunsettheme
 */
