--- a/assets/css/sunset.css
+++ b/assets/css/sunset.css
@@ -1,10 +1,9 @@
 /*
 @package sunsetthemen
 */
-
 /* generic */
 body {
-  font-family: 'Raleway', 'Helvetica', Arial, sans-serif;
+  font-family: "Raleway", "Helvetica", Arial, sans-serif;
 }
 
 .background-image {
@@ -16,13 +15,13 @@ body {
 /* Header */
 .header-container {
   height: 326px;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .4);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
-
-.site-description {
+.header-container .site-description {
   margin-top: 0.4em;
 }
-
-.site-title {
+.header-container .site-title {
   font-size: 5rem;
 }
+
+/*# sourceMappingURL=sunset.css.map */
